deploy/docker-compose/envoy-db.yml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081


static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cockroach-ui
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 26257
    filter_chains:
    - filters:
      - name: envoy.extensions.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: cockroach
          cluster: cockroach

  clusters:
  - name: cockroach-ui
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cockroach-ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: roach1
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: roach2
                port_value: 8080
        - endpoint:
            address:
              socket_address:
                address: roach3
                port_value: 8080
  - name: cockroach
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cockroach-ui
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: roach1
                port_value: 26257
        - endpoint:
            address:
              socket_address:
                address: roach2
                port_value: 26257
        - endpoint:
            address:
              socket_address:
                address: roach3
                port_value: 26257
